Fix ellipsis on overflow text in popover
[#165117368]

--- a/src/components/video/card/videoCollectionButton/manage-video-collection-button.less
+++ b/src/components/video/card/videoCollectionButton/manage-video-collection-button.less
@@ -54,7 +54,7 @@
   }
 
   &__menu-item {
-    min-width: 400px;
+    max-width: 380px;
     display: inline-block;
   }
 
@@ -63,8 +63,12 @@
   }
 
   &__collection-entry {
+    width: 340px;
     display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
+    vertical-align: bottom;
   }
 
   &__title-input {
